--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
         <canvas width="1000" height="700">
 
         </canvas>
+        <br>
+        <button id="btnLoad">Load</button><button id="btnSave">Save</button>
     </body>
 </html>
