--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
         </canvas>
         <br>
-        <button id="btnLoad">Load</button><button id="btnSave">Save</button>
+        <button id="btnClear">Clear local storage</button>
+        <button id="btnSave">Save</button>
     </body>
 </html>
