add variable track width

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         </canvas>
         <br>
         <button id="btnClear">Clear local storage</button>
-        <button id="btnSave">Save</button>
+        <button id="btnSave">Save</button><br>
+        Track width: <input type="range" min="1" max="200" value="50" id="trackWidth"><br>
+        Linearization resolution: <input type="range" min="1" max="30" id="linearizationResolution"><br>
     </body>
 </html>
