implement control point visibility toggle

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         <button id="btnSave">Save</button><br>
         Track width: <input type="range" min="1" max="200" value="50" id="trackWidth"><br>
         Linearization resolution: <input type="range" min="1" max="30" id="linearizationResolution"><br>
+        Show control points: <input type="checkbox" id="showControlPoints">
     </body>
 </html>
