--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <button id="btnSave">Save</button><br>
         Track width: <input type="range" min="1" max="200" value="50" id="trackWidth"><br>
         Linearization resolution: <input type="range" min="1" max="30" id="linearizationResolution"><br>
-        Show control points: <input type="checkbox" id="showControlPoints">
+        Show control points: <input type="checkbox" id="showControlPoints"><br>
+        <button id="setStartAnchor">Set start anchor</button>
+        <button id="togglePathDirection">Toggle path direction</button>
     </body>
 </html>
